--- a/partials/urlDialog.html
+++ b/partials/urlDialog.html
@@ -1,10 +1,41 @@
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <title>Interactive Drawing Board Client UI</title>
+    <meta name="description" content="An Interactive Drawing Board">
+    <meta name="author" content="Zheng Ma">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!--<link rel="stylesheet" href="css/style.css"/>-->
+</head>
+
 <html>
 <body> 
-  <div id="host-choice">
-      <input type="button" value="Start/Connect To Localhost" onclick="chooseLocalhost()">
-      <input type="url" placeholder="Host IP or URL" id="host-url">
-      <input type="submit" value="Submit" onclick="chooseRemotehost()">
+  <div id="host-choice" class="container">
+      <!--<input type="button" value="Start/Connect To Localhost" onclick="chooseLocalhost()">-->
+      <div class="row" style="margin-top: 25px">
+          <div class="col-md-8">
+              <h3>Enter The Host:</h3>
+          </div>
+          <div class="col-md-8" style="margin-top: 5px">
+              <div class="input-group">
+                  <span class="input-group-addon" id="basic-addon3">@</span>
+                  <input type="url" class="form-control" placeholder="Host IP or URL" aria-describedby="basic-addon3" id="host-url">
+              </div>
+          </div>
+          <div class="col-md-4" style="margin-top: 5px">
+              <button type="submit" class="btn btn-info" onclick="chooseRemotehost()">Submit</button>
+          </div>
+      </div>
+
+      <h3> OR </h3>
+      <button type="button" class="btn btn-primary" onclick="chooseLocalhost()">Start/Connect To Localhost</button>
   </div>
+
    
    <script type="text/javascript"> 
       const ipcRenderer = require('electron').ipcRenderer;
