--- a/partials/urlDialog.html
+++ b/partials/urlDialog.html
@@ -23,7 +23,7 @@
           </div>
           <div class="col-md-8" style="margin-top: 5px">
               <div class="input-group">
-                  <span class="input-group-addon" id="basic-addon3"><i class="fa fa-globe fa-lg" aria-hidden="true"></i></span>
+                  <span class="input-group-addon" id="basic-addon3"><i class="fa fa-globe fa-lg" aria-hidden="true"></i>   http://</span>
                   <input type="url" class="form-control" placeholder="Host IP or URL" aria-describedby="basic-addon3" id="host-url">
               </div>
 
@@ -58,7 +58,7 @@
       };
       
       var chooseRemotehost = function(){
-          var boardurl = document.getElementById('host-url').value + ':' + port ;
+          var boardurl = 'http://' + document.getElementById('host-url').value + ':' + port ;
           var currentRoom = document.getElementById('channel-name').value ;
           dest = { url: boardurl, room: currentRoom};
           ipcRenderer.send('connect-remote-host', dest);
