--- a/partials/urlDialog.html
+++ b/partials/urlDialog.html
@@ -35,37 +35,18 @@
           </div>
 
           <div class="col-md-4" style="margin-top: 10px">
-              <button type="submit" class="btn btn-info" onclick="chooseRemotehost()"><i class="fa fa-link fa-lg" aria-hidden="true"></i> Connect</button>
+              <button type="submit" class="btn btn-info" onclick="connection.chooseRemotehost()"><i class="fa fa-link fa-lg" aria-hidden="true"></i> Connect</button>
           </div>
 
 
       </div>
 
       <h3> OR </h3>
-      <button type="button" class="btn btn-primary" onclick="chooseLocalhost()"><i class="fa fa-server fa-lg" aria-hidden="true"></i>  Start/Connect To Localhost</button>
+      <button type="button" class="btn btn-primary" onclick="connection.chooseLocalhost()"><i class="fa fa-server fa-lg" aria-hidden="true"></i>  Start/Connect To Localhost</button>
   </div>
 
-   
-   <script type="text/javascript"> 
-      const ipcRenderer = require('electron').ipcRenderer;
-      var randomRoom = require('random-string');
-      var port = 8080 ;
-      var dest = null ;
-      
-      var chooseLocalhost = function(){
-          dest = { url: 'http://localhost:8080', room: 'testdraw'};
-          ipcRenderer.send('start-localhost', dest);
-      };
-      
-      var chooseRemotehost = function(){
-          var boardurl = 'http://' + document.getElementById('host-url').value + ':' + port ;
-          var currentRoom = document.getElementById('channel-name').value ;
-          dest = { url: boardurl, room: currentRoom};
-          ipcRenderer.send('connect-remote-host', dest);
-          console.log(dest);
-      };
-      
-   </script>
+
+  <script src="../js/connection.js"></script>
 
 </body> 
 </html> 
